Enkle record-builds + en del sonar (#5559)
* Enkle record-builds + en del sonar

* Revert toi default